--- a/src/containers/SearchPage/SearchPage.css
+++ b/src/containers/SearchPage/SearchPage.css
@@ -2,55 +2,65 @@
   position: relative;
   left: 0px;
   font-size: 50px;
+  font-family:Verdana;
 }
 
 #txtSearch{
   position: relative;
   left: 0px;
   font-size: 30px;
+  font-family:Verdana;
 }
 
 #inputSearch{
   position: relative;
   left: 0px;
+  font-family:Verdana;
 }
 
 #txtType{
   position: relative;
   left: 0px;
   font-size: 30px;
+  font-family:Verdana;
 }
 
-/*#radioButtonType{
+#radioButtonType{
   position: relative;
-  left: 220px;
-}*/
+  left: 0px;
+  font-family:Verdana;
+}
 
 #btnSubmit{
   position: relative;
-  left: 0px;
+    -moz-box-shadow:inset -1px 1px 7px 1px #f29c93;
+  	-webkit-box-shadow:inset -1px 1px 7px 1px #f29c93;
+  	box-shadow:inset -1px 1px 7px 1px #f29c93;
+  	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #fe1a00), color-stop(1, #ce0100));
+  	background:-moz-linear-gradient(top, #fe1a00 5%, #ce0100 100%);
+  	background:-webkit-linear-gradient(top, #fe1a00 5%, #ce0100 100%);
+  	background:-o-linear-gradient(top, #fe1a00 5%, #ce0100 100%);
+  	background:-ms-linear-gradient(top, #fe1a00 5%, #ce0100 100%);
+  	background:linear-gradient(to bottom, #fe1a00 5%, #ce0100 100%);
+  	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#fe1a00', endColorstr='#ce0100',GradientType=0);
+  	background-color:#fe1a00;
+  	-moz-border-radius:5px;
+  	-webkit-border-radius:5px;
+  	border-radius:5px;
+  	border:1px solid #d83526;
+  	display:inline-block;
+  	cursor:pointer;
+  	color:#ffffff;
+  	font-family:Verdana;
+  	font-size:18px;
+  	font-weight:bold;
+  	text-decoration:none;
+  	text-shadow:0px 2px 0px #b23e35;
+    text-align: center;
+    height:50px;
+    width:100px;
 }
 
-
-#home1{
-  width: 620px;
-      height: 100px;
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      margin-left: -310px;
-      margin-top: -50px;
-}
-
-#home2{
-      width: 620px;
-      height: 100px;
-      position: fixed;
-      top: 100%;
-      left: 100%;
-      margin-left: -310px;
-      margin-top: -30px;
-}
 
 #sidebarStuff{
   background-color: #F0F0F0;
