--- a/src/css/Form.css
+++ b/src/css/Form.css
@@ -1,4 +1,24 @@
 .mainform fieldset.inputfield textarea.textfield {
-    height: 8em;
-    width: 10em;
+    height: 32em;
+    width: 64em;
+}
+
+#title{
+  position: relative;
+  font-size: 40px;
+  font-family:Verdana;
+}
+
+#legendtext{
+  position: relative;
+  font-size: 20px;
+  font-family:Verdana;
+}
+
+#legendTextPlaceholder{
+  position: relative;
+  font-size: 30px;
+  font-family:Verdana;
+      height: 10em;
+      width: 30em;
 }
