--- a/src/css/App.css
+++ b/src/css/App.css
@@ -67,8 +67,19 @@ body {
 }
 
 .loading .posts {
-    test-align: center;
+    text-align: center;
     color: white;
+    font-weight: bold;
+}
+
+#postsTitle {
+    font-size: 6em;
+    text-align: center;
+    margin-bottom: -1em;
+    margin-top: -0.25em;
+    padding-top: 0.25em;
+    color: white;
+    text-shadow: 2px 2px black;
 }
 
 .button {
