--- a/src/css/Form.css
+++ b/src/css/Form.css
@@ -1,24 +1,53 @@
-.mainform fieldset.inputfield textarea.textfield {
-    height: 32em;
-    width: 64em;
+.App form {
+    display: block;
+    width: 50%;
+    max-width: 500px;
+    margin: 0;
+    padding: 1em 0 0 1em;
 }
 
-#title{
-  position: relative;
-  font-size: 40px;
-  font-family:Verdana;
+.App form input, .App form textarea, .App form button {
+    font: 1em arial;
 }
 
-#legendtext{
-  position: relative;
-  font-size: 20px;
-  font-family:Verdana;
+.App form button {
+    float: right;
 }
 
-#legendTextPlaceholder{
-  position: relative;
-  font-size: 30px;
-  font-family:Verdana;
-      height: 10em;
-      width: 30em;
+.App form input {
+    width: 100%;
+}
+
+.App form textarea {
+    width: 100%;
+    height: 8em;
+}
+
+.App form fieldset {
+    background: linear-gradient(#ffffff, #dddddd);
+    border-radius: 6px;
+}
+
+.App form fieldset legend {
+    background: linear-gradient(#ffffff, #dddddd);
+    border-radius: 6px;
+    padding: 0px 5px;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+}
+
+.App form legend.title {
+    color: #444;
+    line-height: 30px;
+}
+
+.App fieldset fieldset{
+    border: none;
+    background:none;
+    filter:none
+}
+.App fieldset fieldset legend {
+    background:none;
+    border:none; 
+    filter:none
 }
