--- a/src/css/RegisterPage.css
+++ b/src/css/RegisterPage.css
@@ -59,4 +59,28 @@
   font-family:Verdana;
   float: left;
   left: 500px;
+    -moz-box-shadow:inset -1px 1px 7px 1px #f29c93;
+  	-webkit-box-shadow:inset -1px 1px 7px 1px #f29c93;
+  	box-shadow:inset -1px 1px 7px 1px #f29c93;
+  	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #fe1a00), color-stop(1, #ce0100));
+  	background:-moz-linear-gradient(top, #fe1a00 5%, #ce0100 100%);
+  	background:-webkit-linear-gradient(top, #fe1a00 5%, #ce0100 100%);
+  	background:-o-linear-gradient(top, #fe1a00 5%, #ce0100 100%);
+  	background:-ms-linear-gradient(top, #fe1a00 5%, #ce0100 100%);
+  	background:linear-gradient(to bottom, #fe1a00 5%, #ce0100 100%);
+  	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#fe1a00', endColorstr='#ce0100',GradientType=0);
+  	background-color:#fe1a00;
+  	-moz-border-radius:5px;
+  	-webkit-border-radius:5px;
+  	border-radius:5px;
+  	border:1px solid #d83526;
+  	display:inline-block;
+  	cursor:pointer;
+  	color:#ffffff;
+  	font-weight:bold;
+  	text-decoration:none;
+  	text-shadow:0px 2px 0px #b23e35;
+    text-align: center;
+    height:50px;
+    width:250px;
 }
