--- a/src/css/SearchPage.css
+++ b/src/css/SearchPage.css
@@ -1,33 +1,34 @@
 #txtTitle{
   position: relative;
-  left: 0px;
   font-size: 50px;
   font-family:Verdana;
+  float: left;
+  
 }
 
 #txtSearch{
   position: relative;
-  left: 0px;
+  left: 500px;
   font-size: 30px;
   font-family:Verdana;
 }
 
 #inputSearch{
   position: relative;
-  left: 0px;
+  left: 510px;
   font-family:Verdana;
 }
 
 #txtType{
   position: relative;
-  left: 0px;
+  left: 500px;
   font-size: 30px;
   font-family:Verdana;
 }
 
 #radioButtonType{
   position: relative;
-  left: 0px;
+  left: 500px;
   font-family:Verdana;
 }
 
@@ -59,6 +60,7 @@
     text-align: center;
     height:50px;
     width:100px;
+left:500px;
 }
 
 
