--- a/src/css/App.css
+++ b/src/css/App.css
@@ -5,7 +5,6 @@ body {
     background: radial-gradient(white, red, white);*/
     background-image: red;
     background-repeat: no-repeat;
-    height: 200vh;
 }
 
 #sidebarContainer {
@@ -15,7 +14,6 @@ body {
     background: radial-gradient(white, red, white);*/
     background-image: linear-gradient(red, white);
     background-repeat: no-repeat;
-    height: 200vh;
 }
 
 .App-logo {
@@ -70,6 +68,7 @@ body {
     text-align: center;
     color: white;
     font-weight: bold;
+    text-shadow: 1px 1px black, -1px -1px black;
 }
 
 #postsTitle {
